# frangipani

./: .gitignore  CHANGELOG  Cargo.toml  LICENSE  README.md
examples/: basic.rs  continuous.rs  count.rs
src/: config.rs  downloader.rs  engine.rs  lib.rs  spider.rs  stats.rs  util.rs
src/engine/: continuous_crawl_task.rs  downloader_pool.rs  guard_robot.rs  mod.rs  processing_task.rs  reporting_task.rs  thread_state.rs  worker_pool.rs  worker_task.rs
src/scheduler/: mempq.rs  mod.rs
