[package]
name = "frangipani"
version = "0.3.0"
edition = "2021"
authors = ["Armin Primadi <aprimadi@gmail.com>"]
keywords = ["scraping", "scraper", "crawler", "web-crawler", "continuous-crawler"]
description = "Scraping framework for rust"
license = "MIT"
homepage = "https://github.com/aprimadi/frangipani"
repository = "https://github.com/aprimadi/frangipani"

[dependencies]
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
ctrlc = "3.2"
fasthash = "0.4"
log = "0.4"
rand = "0.8"
rand_chacha = "0.3"
reqwest = { version = "0.11", features = ["stream", "json"] }
rocksdb = "0.19"
skiplist = "0.4"
texting_robots = "0.2"
tokio = { version = "1.20", features = ["full"] }
ureq = "2.5"
var-bitmap = "0.1"

[dev-dependencies]
env_logger = "0.9"
scraper = "0.13"
